fixing menu alignment

--- a/src/components/menu/menu.module.scss
+++ b/src/components/menu/menu.module.scss
@@ -5,6 +5,7 @@
   padding-top: 0;
   font-size: calc(10px + 2vmin);
   font-family: cardo;
+  text-align: center;
 
   @media (min-width: 70em) {
     &.entry {
